Zavrsen prevod za sve dosad uradjene prozore

--- a/resources/Translation_bs.properties
+++ b/resources/Translation_bs.properties
@@ -9,3 +9,19 @@ ResearchPapers = Naucni rad
 ResearchPaper = Naucni rad
 Search = Pretraga:
 Language = Jezik
+Name = Ime:
+Authors = Autori:
+Close = Zatvori:
+Subject1 = Tema:
+University = Universitet/Institut:
+Surname = Prezime:
+Title = Titula:
+Cancel = Otkazi
+Text = Tekst:
+ResPapName = Ime naucnog rada:
+Keywords = Kljucne rijeci:
+AddNew = Dodaj
+Creator = Kreirao:
+Researchpapersdatabase = Baza podataka naucnih radova
+Version/date = Verzija/datum:
+Aplication = Aplikacija:
