Uradjen novi tab koji izlistava sve autore, podatke o njima i sve radove na kojima je pojedinacni autor radio.

--- a/resources/Translation_bs.properties
+++ b/resources/Translation_bs.properties
@@ -11,6 +11,7 @@ Search = Pretraga:
 Language = Jezik
 Name = Ime:
 Authors = Autori:
+Authors1 = Autori
 Close = Zatvori:
 Subject1 = Tema:
 University = Universitet/Institut:
@@ -25,3 +26,7 @@ Creator = Kreirao:
 Researchpapersdatabase = Baza podataka naucnih radova
 Version/date = Verzija/datum:
 Aplication = Aplikacija:
+Datum = Date
+Name1 = Ime
+Title1 = Titula
+University1 = Universitet/Institut
