Uradjeni izuzeci koje koristim u konstruktorima naucnog rada i autora pri validaciji podataka

--- a/resources/Translation_bs.properties
+++ b/resources/Translation_bs.properties
@@ -26,7 +26,7 @@ Creator = Kreirao:
 Researchpapersdatabase = Baza podataka naucnih radova
 Version/date = Verzija/datum:
 Aplication = Aplikacija:
-Datum = Date
+Datum = Datum
 Name1 = Ime
 Title1 = Titula
 University1 = Universitet/Institut
