Zavrsni commit, ima jedan error bice objasnjen na kraju izvjestaja. Ne smeta pri radu a rjesenje ne mogu pronaci niti otkriti pravi uzrok

--- a/resources/Translation_bs.properties
+++ b/resources/Translation_bs.properties
@@ -1,8 +1,8 @@
-_Save = _Sacuvaj
-_Print = _Printaj
-_Exit = _Izadji
-_Options = _Opcije
-_About = _O aplikaciji
+Save = _Sacuvaj
+Print = _Printaj
+Exit = _Izadji
+Options = _Opcije
+About = _Informacije
 Subject = Tema
 Author/s = Autor/i
 ResearchPapers = Naucni rad
